# gpu-fluid-sim

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/: camera.h  debug_image.h  imgui_ui.h  initialization.h  mouse_stirring.h  particle_layout.h  particle_physics.h  particle_renderer.h  render.h  simulation.h  simulation_diagnostics.h  swapchain_status.h  visual_scale.h
scenes/: accuracy_settling_2d.yaml
shaders/: background2d.frag  density_update.comp  particle_simulation.comp  spatial_lookup.traversal.glsl
src/: camera.cpp  debug.cpp  debug_image.cpp  imgui_ui.cpp  initialization.cpp  main.cpp  mouse_stirring.cpp  particle_physics.cpp  particle_renderer.cpp  render.cpp  simulation.cpp  simulation_diagnostics.cpp  simulation_state.cpp
tests/: mouse_stirring_test.cpp  particle_layout_test.cpp  particle_pipeline_source_test.cpp  simulation_diagnostics_test.cpp  sph_shader_source_test.cpp  swapchain_status_test.cpp  visual_scale_test.cpp
